Sutter Health/src/objects/Benefit_Plan_Data_Filters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This data filters are used for filtering the plans on Plan Selection screen. In this, IN,INCLUDES,= operators we can use. If we give field values then no need to give Reference Field API.</description>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>Benefit Plan Metadata Field API Name</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <inlineHelpText>Use any one of these &quot;INCLUDES&quot;,&quot;IN&quot;,&quot;=&quot;</inlineHelpText>
        <label>Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Field_API__c</fullName>
        <inlineHelpText>Corresponding object(Opporutnity,RFP,Quote,SSO,SCN) Field API.</inlineHelpText>
        <label>Reference Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HR_Benefit Plan Data Filters</label>
</CustomObject>